finished styling for splash and login

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body ng-app="textTwilio">
-<div ng-controller="indexCtrl">
+<div class="app" ng-controller="indexCtrl">
   <div class="header">
     <button class="brandbtn" ng-click="homeOrSplash(loggedin)"><p class="brand" >megaPhone</p></button>
     <a class="loginlink" href="#/login" ng-click="logout()" ng-show="loggedin">Logout</a>
