--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title></title>
+  <link rel="stylesheet" href="icons/css/pencil.css"/>
+  <link rel="stylesheet" href="bower_components/ngDialog/css/ngDialog.css"/>
   <link rel="stylesheet" href="style.css"/>
   <script src="https://cdn.firebase.com/js/client/2.2.2/firebase.js"></script>
 
@@ -23,6 +25,7 @@
 
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
+<script src="bower_components/ngDialog/js/ngDialog.js"></script>
 
 
 <script src="scripts/app.js"></script>
